# robusta-cli

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test-installation.yaml
robusta_cli/: auth.py  backend_profile.py  demo_alert.py  eula.py  integrations_cmd.py  main.py  playbooks_cmd.py  self_host.py  simple_sink_config.py
robusta_cli/cli/: auth.py  backend_profile.py  eula.py  integrations_cmd.py  main.py  playbooks_cmd.py  self_host.py
