[tool.poetry]
name = "robusta-cli"
version = "0.1.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.13"
requests = "^2.32.2"
typer = "^0.12.3"
pyyaml = "^6.0.1"
click-spinner = "^0.1.10"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
