[tool.poetry]
name = "robusta-cli"
version = "0.0.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.13"
typer = "^0.12.3"
pyyaml = "^6.0.1"
click-spinner = "^0.1.10"
cryptography = "^42.0.7"
dpath = "^2.0.5"
pydantic = "1.8.1"
slack-sdk = "^3"
pyjwt = "^2.4.0"
requests = "^2.32.2"
certifi = "^2024.2.2"
types-toml = "^0.10.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
