[tool.poetry]
name = "robusta-cli"
version = "0.0.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
robusta = "robusta_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
typer = "^0.12.3"
pyyaml = "^6.0.1"
click-spinner = "^0.1.10"
cryptography = "43.0.1"
dpath = "^2.0.5"
pydantic = "^1.0"
slack-sdk = "^3"
pyjwt = "^2.4.0"
requests = "^2.32.2"
certifi = "2024.7.4"
types-toml = "^0.10.2"
toml = "^0.10.2"
hikaru-model-28 = "^1.1.0"
kubernetes = "^29"
urllib3 = ">2.6.0"
click = "8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
